force-app/main/default/objects/Team__c/fields/Quarter_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Achieved__c</fullName>
    <label>Quarter Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>