force-app/main/default/objects/Team__c/fields/Quarter_Target__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Target__c</fullName>
    <label>Quarter Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>