force-app/main/default/objects/Team__c/fields/Year_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Year_Achieved__c</fullName>
    <label>Year Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>