force-app/main/default/objects/Team__c/fields/Year_Target__c.field-meta.xml
<CustomField>
    <fullName>Year_Target__c</fullName>
    <label>Year Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>